<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/lib/com.infokmg.hugv.triagemnutricional.SplashScreen"
        tools:context=".SplashScreen"
        tools:showIn="@layout/activity_splash_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="vertical">

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundScreen"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_logos"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="vertical"
            style="@style/main_cards_styles">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_labels"
            style="@style/main_cards_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/main_titles_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_university" />

            <TextView
                android:id="@+id/textView3"
                style="@style/main_titles_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_hospital" />

            <TextView
                android:id="@+id/textView4"
                style="@style/main_titles_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_clinic_department" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginTop="30dp"
            android:layout_weight="0.15">

            <Button
                android:id="@+id/bt_new_triage"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/new_triage" />

            <Button
                android:id="@+id/bt_my_triage"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/my_triages" />

            <Button
                android:id="@+id/bt_about_app"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/bt_about_app" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>

