<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="layout.Identificacao"
    android:background="@color/colorBackgroundScreen">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tiv_patient"
                app:hintTextAppearance="@style/tiv_text_fields">

                <EditText
                    style="@style/text_fields_style"
                    android:id="@+id/et_patient"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_patient"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiv_id_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/tiv_text_fields">

                <EditText
                    android:id="@+id/et_id_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    style="@style/text_fields_style"
                    android:hint="@string/hint_id_patient" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/tiv_text_fields"
                android:id="@+id/tiv_comorb">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="@string/hint_comorbidades"
                    android:id="@+id/et_comorb"
                    style="@style/text_fields_style"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tiv_doctor_diagnostic"
                app:hintTextAppearance="@style/tiv_text_fields">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_fields_style"
                    android:inputType="textCapSentences"
                    android:id="@+id/et_doctor_diagnostic"
                    android:hint="@string/hint_doctor_diagnost" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_clinic"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/text_fields_style"
                            android:id="@+id/et_clinic"
                            android:inputType="textCapSentences"
                            android:hint="@string/hint_clinic"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_room"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_room"
                            android:inputType="numberDecimal"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_room" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_actual_weight"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:id="@+id/et_actual_weight"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_actual_weight" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_usual_weight"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:id="@+id/et_usual_weight"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_usual_weight" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_height"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:id="@+id/et_height"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_height" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_age"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:id="@+id/et_age"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_age" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_imc"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_imc"
                            android:focusable="false"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_imc"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tiv_diag_nutri"
                        app:hintTextAppearance="@style/tiv_text_fields">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_diag_nutri"
                            android:focusable="false"
                            style="@style/text_fields_style"
                            android:hint="@string/hint_diag_nutri" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>